[gd_scene format=3 uid="uid://owaw58xuavjs"]

[ext_resource type="Script" uid="uid://bvrqqkrsakca8" path="res://Scripts/KLineChart.gd" id="1_hpc76"]
[ext_resource type="Script" uid="uid://cqi6nn2gngrpy" path="res://Scripts/GameController.gd" id="1_tr2i4"]
[ext_resource type="Script" uid="uid://dcaj4luvcf85b" path="res://Scripts/CrosshairOverlay.gd" id="3_nhkr4"]

[node name="StatsStation" type="Control" unique_id=99667446]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tr2i4")

[node name="KLineChart" type="Control" parent="." unique_id=951920011]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hpc76")

[node name="CrosshairOverlay" type="Control" parent="KLineChart" unique_id=1113313176]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_nhkr4")

[node name="FileDialog" type="FileDialog" parent="." unique_id=417778728]
unique_name_in_owner = true
oversampling_override = 1.0

[node name="Timer" type="Timer" parent="." unique_id=1707268968]
unique_name_in_owner = true

[node name="UI_Canvas" type="Control" parent="." unique_id=1105325018]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI_Canvas" unique_id=1364889449]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_bottom = 101.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BtnLoad" type="Button" parent="UI_Canvas/VBoxContainer" unique_id=1479826832]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load"

[node name="BtnPlay" type="Button" parent="UI_Canvas/VBoxContainer" unique_id=1471332312]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play"

[node name="BtnSpeedUp" type="Button" parent="UI_Canvas/VBoxContainer" unique_id=626723177]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SpeedUp"

[node name="TradePanel" type="PanelContainer" parent="UI_Canvas" unique_id=1892688298]
layout_mode = 1
offset_right = 172.0
offset_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI_Canvas/TradePanel" unique_id=50835662]
layout_mode = 2
alignment = 1

[node name="LblBalance" type="Label" parent="UI_Canvas/TradePanel/VBoxContainer" unique_id=1989671415]
unique_name_in_owner = true
layout_mode = 2
text = "Balance: ----"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LblEquity" type="Label" parent="UI_Canvas/TradePanel/VBoxContainer" unique_id=290208281]
unique_name_in_owner = true
layout_mode = 2
text = "Equity: ----"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI_Canvas/TradePanel/VBoxContainer" unique_id=261001971]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI_Canvas/TradePanel/VBoxContainer" unique_id=1133509628]
layout_mode = 2
alignment = 1

[node name="BtnBuy" type="Button" parent="UI_Canvas/TradePanel/VBoxContainer/HBoxContainer" unique_id=66877688]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "BUY"

[node name="BtnSell" type="Button" parent="UI_Canvas/TradePanel/VBoxContainer/HBoxContainer" unique_id=1336583940]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "SELL"

[node name="BtnCloseAll" type="Button" parent="UI_Canvas/TradePanel/VBoxContainer" unique_id=841434791]
unique_name_in_owner = true
layout_mode = 2
text = "Close All"
